samples/_failures_safe/1761516005_5acaf8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_49d39ff1.c: In function ‘tokenize’:
./samples/SAFE/__tmp_49d39ff1.c:160:20: error: expected ‘;’ at end of input
  160 |                 col
      |                    ^
      |                    ;
./samples/SAFE/__tmp_49d39ff1.c:160:17: error: expected declaration or statement at end of input
  160 |                 col
      |                 ^~~
./samples/SAFE/__tmp_49d39ff1.c:160:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_49d39ff1.c:160:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_49d39ff1.c:160:17: error: expected declaration or statement at end of input
